force-app/main/default/objects/Book_Flight__c/fields/Flight_From__c.field-meta.xml
<CustomField>
    <fullName>Flight_From__c</fullName>
    <label>Flight From</label>
    <length>255</length>
    <type>Text</type>
</CustomField>