force-app/main/default/objects/Book_Flight__c/fields/Flight_To__c.field-meta.xml
<CustomField>
    <fullName>Flight_To__c</fullName>
    <label>Flight To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>