force-app/main/default/objects/Book_Flight__c/validationRules/Checking_Passenger_Criminal_Background.validationRule-meta.xml
<ValidationRule>
    <fullName>Checking_Passenger_Criminal_Background</fullName>
    <active>true</active>
    <errorConditionFormula>Passenger__r.Any_Ongoing_Warrant__c = true</errorConditionFormula>
    <errorMessage>you can not Book Flight For Passenger having Ongoing Warrant.</errorMessage>
</ValidationRule>