force-app/main/default/objects/Book_Flight__c/validationRules/Flight_Type_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Flight_Type_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Flight_Type__c, &apos;Domestic&apos;),  
    Visa_Required__c = TRUE
   )</errorConditionFormula>
    <errorDisplayField>Visa_Required__c</errorDisplayField>
    <errorMessage>Visa Required Should Be Unchecked For Domestic Flight.</errorMessage>
</ValidationRule>