force-app/main/default/objects/Book_Flight__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Flight_Arrival_Time__c</columns>
    <columns>Flight_From__c</columns>
    <columns>Flight_To__c</columns>
    <columns>Flight_Date__c</columns>
    <columns>Flight_Type__c</columns>
    <columns>Ticket_Price__c</columns>
    <columns>Visa_Required__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>